fix: remove wrong color on tab panel content

--- a/src/components/tabs/tabs.module.css
+++ b/src/components/tabs/tabs.module.css
@@ -89,5 +89,4 @@
 .tab_panel {
   min-height: 50vh;
   padding: var(--size-400) 0;
-  color: var(--color-primary);
 }
